bug fix, ongoing updates of documentation
