# public/js/apidoc/swagger.json
@@ -102,7 +102,7 @@
                     }
                 ],
                 "summary": "Get a list of collections.",
-                "description": "Using the parameter filters, you can get the collections associated with a specific user.",
+                "description": "Using the parameter filters, you can get the collections associated with a specific user. You only need to provide one user filter with each call. The access filter refers to the access rights you have to another user's collections. If users are not provided then all publicly available collections are returned.",
                 "tags": [
                     "Collection"
                 ],
@@ -115,6 +115,16 @@
                                 "$ref": "#/definitions/Collection"
                             }
                         }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "properties": {
+                                "error": {
+                                    "type": "string"
+                                }
+                            }
+                        }
                     }
                 }
             }
@@ -125,7 +135,7 @@
                     "Collection"
                 ],
                 "summary": "Create a new collection.",
-                "description": "This creates a new collection and stores it in the database. You can add records to it later with  ```/collection/{collectionId}/addRecord```. Fields with asterisk are required.",
+                "description": "This creates a new collection and stores it in the database. You can add records to it later with  ```/collection/{collectionId}/addRecord```. Fields with asterisk are required. Note that calls to this path can also be used for exhibitions. At least one user must be logged in for the session and will be automatically retrieved. The owner of the collection will be the first user.",
                 "parameters": [
                     {
                         "in": "body",
@@ -135,14 +145,10 @@
                         "schema": {
                             "type": "object",
                             "required": [
-                                "ownerId",
                                 "title",
                                 "isPublic"
                             ],
                             "properties": {
-                                "ownerId": {
-                                    "type": "string"
-                                },
                                 "title": {
                                     "type": "string"
                                 },
@@ -154,6 +160,17 @@
                                 },
                                 "rights": {
                                     "type": "string"
+                                },
+                                "isExhibition": {
+                                    "type": "boolean"
+                                },
+                                "exhibition": {
+                                    "type": "object",
+                                    "properties": {
+                                        "intro": {
+                                            "type": "string"
+                                        }
+                                    }
                                 }
                             }
                         }
@@ -166,11 +183,23 @@
                             "$ref": "#/definitions/Collection"
                         }
                     },
-                    "403": {
+                    "400": {
                         "description": "Bad Request",
                         "schema": {
                             "properties": {
                                 "error": {
+                                    "description": "invalid json, constraint violations",
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "properties": {
+                                "error": {
+                                    "description": "cannot find user or unspecified",
                                     "type": "string"
                                 }
                             }
@@ -181,6 +210,7 @@
                         "schema": {
                             "properties": {
                                 "error": {
+                                    "description": "title already exists, cannot save to database",
                                     "type": "string"
                                 }
                             }
@@ -199,7 +229,7 @@
                 }
             ],
             "post": {
-                "description": "Adds a record to the specified collection, creating a new record that containts the specified metadata. Note that calls to this path can also be used for exhibitions.",
+                "description": "Adds a record to the specified collection, creating a new record that containts the specified metadata. You will need to have write access or be the owner of the collection to add records to it. Note that calls to this path can also be used for exhibitions.",
                 "summary": "Add a record to a collection.",
                 "tags": [
                     "Collection",
@@ -211,7 +241,36 @@
                         "name": "body",
                         "description": "Record JSON schema",
                         "schema": {
-                            "$ref": "#/definitions/Record"
+                            "type": "object",
+                            "required": [
+                                "ownerId",
+                                "title",
+                                "isPublic"
+                            ],
+                            "properties": {
+                                "source": {
+                                    "type": "string"
+                                },
+                                "sourceId": {
+                                    "type": "string"
+                                },
+                                "title": {
+                                    "type": "string"
+                                },
+                                "description": {
+                                    "type": "string"
+                                },
+                                "thymbnailUrl": {
+                                    "type": "string"
+                                },
+                                "sourceUrl": {
+                                    "type": "string"
+                                },
+                                "position": {
+                                    "type": "integer",
+                                    "description": "Mandatory field for exhibitions! Default is 0."
+                                }
+                            }
                         }
                     }
                 ],
@@ -222,8 +281,38 @@
                             "$ref": "#/definitions/Record"
                         }
                     },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "properties": {
+                                "error": {
+                                    "description": "no position, constraint violation",
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "properties": {
+                                "error": {
+                                    "description": "no permission to edit collection",
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    },
                     "500": {
-                        "description": "Internal Server Error"
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "properties": {
+                                "error": {
+                                    "description": "cannot save to database",
+                                    "type": "string"
+                                }
+                            }
+                        }
                     }
                 }
             }
@@ -275,7 +364,7 @@
                 }
             ],
             "get": {
-                "description": "Retrieves all records from the collection specified in the path and returns an array of record objects. The format parameter defines the format of this array.",
+                "description": "Retrieves all records from the collection specified in the path and returns an array of record objects. The format parameter defines the serialization in the JSON field response.",
                 "summary": "Retrieve all records in a collection.",
                 "tags": [
                     "Collection"
@@ -562,7 +651,7 @@
                         "name": "body",
                         "description": "Contains metadata about the exhibition",
                         "schema": {
-                            "$ref": "#/definitions/Exhibition"
+                            "$ref": "#/definitions/Collection"
                         }
                     }
                 ],
@@ -570,7 +659,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/Exhibition"
+                            "$ref": "#/definitions/Collection"
                         }
                     },
                     "400": {
@@ -588,7 +677,7 @@
                     "Exhibition"
                 ],
                 "summary": "Get all user exhibitons.",
-                "description": "Returns an array of exhibition JSON objects, of all exhibitions owned by the currently logged in user. See ```/user/login```.",
+                "description": "Returns an array of collection JSON objects, for all exhibitions owned by the currently logged in user. See ```/user/login```.",
                 "parameters": [
                     {
                         "name": "offset",
@@ -609,7 +698,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/Exhibition"
+                                "$ref": "#/definitions/Collection"
                             }
                         }
                     },
@@ -883,6 +972,7 @@
     },
     "definitions": {
         "User": {
+            "description": "Describes a registered user in the database.",
             "type": "object",
             "required": [
                 "firstName",
@@ -930,50 +1020,7 @@
             }
         },
         "Collection": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "object",
-                    "properties": {
-                        "value": {
-                            "type": "string"
-                        }
-                    }
-                },
-                "ownerId": {
-                    "type": "object",
-                    "properties": {
-                        "value": {
-                            "type": "string"
-                        }
-                    }
-                },
-                "className": {
-                    "type": "string"
-                },
-                "title": {
-                    "type": "string"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "itemCount": {
-                    "type": "integer"
-                },
-                "isPublic": {
-                    "type": "boolean"
-                },
-                "rights": {
-                    "type": "object",
-                    "properties": {
-                        "value": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "Exhibition": {
+            "description": "Collection metadata. The fields isExhibition and exhibition are only used in calls for exhibitions.",
             "type": "object",
             "properties": {
                 "id": {
@@ -1029,9 +1076,11 @@
             }
         },
         "Record": {
+            "description": "An individual record description and metadata. The fields exhibition and position are used only for records in exhibitions.",
             "type": "object",
             "required": [
-                "title"
+                "title",
+                "position"
             ],
             "properties": {
                 "dbId": {
@@ -1080,6 +1129,10 @@
                             "type": "string"
                         }
                     }
+                },
+                "position": {
+                    "description": "default is 0",
+                    "type": "integer"
                 }
             }
         }
